# goit_python_web_homework_13

./: LICENSE  README.md  pyproject.toml
migrations/versions/: 232dd5b91d0f_init.py  240d0bb4e548_add_field_confirmed.py
